Please see also http://phantomjs.org/releases.html.

2012-12-21: Version 1.8.0

    New features

      * Integrated GhostDriver as the WebDriver implementation (issue 39)
      * Added an option to specify the SSL protocol (issue 174)
      * Added process ID (PID) to the System module (issue 769)
      * Added properties to obtain page and frame title (issue 799)
      * Added page navigation methods (issue 808)
      * Added support for modifier keys in keyboard events (issue 835)
      * Added onFilePicker callback for more generic file upload API (issue 843)
      * Added the ability to set the page content and location (issue 909)

    Improvements

      * Fixed date parsing in ISO8601 format (issue 187, 267)
      * Deregistered multiple callback handler (issue 807)
      * Fixed sending of double-click events (issue 848)
      * Increases maximum number of redirects (issue 849)
      * Fixed keycodes sent for lowercase characters (issue 852)
      * Fixed a regression in table row page break (issue 880)
      * Completed the CoffeeScript version of the examples (issue 907)
      * Updated Qt to version 4.8.4 (issue 918)
      * Fixed potential hang in some example scripts (issue 922)

2012-09-22: Version 1.7.0

    New features

      * Added a module system modelled after CommonJS/Node.js (issue 47)
      * Added support for window pop-up (issue 151)
      * Static build on Linux (issue 413)
      * Added run-time detection of SSL support (issue 484)
      * Added more events support (issue 492, 712)
      * Added support for disabling automatic proxy detection (issue 580)
      * Provided page closing callback (issue 678)
      * Added methods to access URL, frames URL, frame Content (issue 758)
      * Added more cookies-related API (issue 761)

    Improvements

      * Refactored command-line options handling (issue 55)
      * Improved the workflow for producing release builds (issue 599)