@@ -6,6 +6,7 @@ Please see also http://phantomjs.org/releases.html.
 
       * Integrated GhostDriver as the WebDriver implementation (issue 39)
       * Added an option to specify the SSL protocol (issue 174)
+      * Added encoding support for WebServer's response (issue 505)
       * Added process ID (PID) to the System module (issue 769)
       * Added properties to obtain page and frame title (issue 799)
       * Added page navigation methods (issue 808)
